--- a/app/assets/stylesheets/residential.scss
+++ b/app/assets/stylesheets/residential.scss
@@ -9,3 +9,43 @@
 .arc path {
   stroke: #fff;
 }
+
+g.arc {
+  &:hover {
+    opacity: .55;
+  }
+}
+
+//bar chart
+.axis path,
+.axis line{
+  fill: none;
+  stroke: #000;
+  shape-rendering: crispEdges;
+}
+
+.bar {
+  fill: steelblue;
+  &:hover {
+    opacity: .85;
+  }
+}
+
+.x.axis path {
+  fill: none;
+  stroke: #000;
+  shape-rendering: crispEdges;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
