--- a/app/assets/stylesheets/residential.scss
+++ b/app/assets/stylesheets/residential.scss
@@ -38,7 +38,17 @@ g.arc {
 }
 
 
+// Scatter Plot
+.dot {
+  stroke: #000;
+}
 
+.tooltip {
+  position: absolute;
+  width: 200px;
+  height: 28px;
+  pointer-events: none;
+}
 
 
 
