--- a/app/assets/stylesheets/residential.scss
+++ b/app/assets/stylesheets/residential.scss
@@ -50,6 +50,27 @@ g.arc {
   pointer-events: none;
 }
 
+// Boxplot
+.box {
+  font: 10px sans-serif;
+}
+
+.box line,
+.box rect,
+.box circle {
+  fill: steelblue;
+  stroke: #000;
+  stroke-width: 1px;
+}
+
+.box .center {
+  stroke-dasharray: 3,3;
+}
+
+.box .outlier {
+  fill: none;
+  stroke: #000;
+}
 
 
 
